<resources>
    <string name="app_name">Santa Clara Golf Club</string>
    <string name="login_name">Login</string>
    <string name="register_name">Registrarse</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="user">Usuario</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="phone">Nº Teléfono</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="country">Pais</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="reservation_day">Dia de la reserva</string>
    <string name="reservation_hour">Hora de la reserva</string>
    <string name="reservation_pack">Pack de la reserva</string>
    <string name="reservation_guests">Acompañantes</string>
    <string name="price">Precio</string>
    <string name="shoes">Calzados</string>
    <string name="stick">Palos</string>
    <string name="golf_balls">Pelotas</string>
    <string name="golf_goves">Guantes</string>
    <string name="pitch_fork">Arreglpiques</string>
    <string name="ok">Ok</string>
    <string name="change_lenguage">Cambiar Idioma</string>
    <string name="not_count">¿No tienes cuenta? Pulsa aquí</string>
    <string name="movements">Ver movimientos</string>
    <string name="manage_users">Administrar Usuarios</string>
    <string name="booking_today">Reservas de hoy</string>
    <string name="booking_type">Tipo Reserva</string>
    <string name="forgot_password">¿Olvidate la contraseña?</string>
    <string name="introduce_email">Ingrese su correo electrónico</string>
    <string name="email_sent">Correo electrónico enviado?</string>
    <string name="email_sent_to">Se ha enviado un correo electrónico a</string>
    <string name="to_reset_password">para restablecer la contraseña.</string>
    <string name="title_error_sent_email">Error al enviar el correo electrónico</string>
    <string name="error_verify_email">Hubo un error al enviar el correo electrónico. Verifique la dirección de correo electrónico e inténtelo nuevamente.</string>
    <string name="accept">Aceptar</string>
    <string name="user_no_exist">El usuario no existe</string>
    <string name="password_failed">La contraseña es incorrecta</string>
    <string name="init_error">Error al iniciar sesión</string>
    <string name="be_admin">Eres un administrador</string>
    <string name="not_be_admin">No eres un administrador</string>
    <string name="email_no_verify">El correo no está verificado</string>
    <string name="send">Enviar</string>
    <string name="invalid_user">Usuario no valido</string>
    <string name="invalid_password">Contraseña no valida</string>
    <string name="out">Salir</string>
    <string name="confirm_exit_message">¿Desea salir de la aplicación?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="password_long">La contraseña debe tener al menos 6 caracteres</string>
    <string name="email_register">El email ya está registrado</string>
    <string name="phone_regiter">El número de teléfono ya está registrado</string>
    <string name="password_notEqual">Las contraseñas no coinciden</string>
    <string name="error_user">Error al crear el usuario</string>

    <!-- Menú de cambio de contraseña -->
    <string name="menu_change_password">Cambiar contraseña</string>
    <string name="change_password_confirmation_title">Confirmación</string>
    <string name="change_password_confirmation_message">¿Estás seguro de que deseas cambiar la contraseña?</string>
    <string name="change_password_success_title">Éxito</string>
    <string name="change_password_success_message">Se ha enviado un correo para restablecer la contraseña.\nLa aplicación se reiniciará para aplicar los cambios.</string>
    <string name="change_password_error_message">Error al enviar el correo de restablecimiento de contraseña</string>

    <!-- Menú de cambio de correo electrónico -->
    <string name="menu_change_email">Cambiar correo electrónico</string>
    <string name="change_email_title">Cambiar correo electrónico</string>
    <string name="change_email_dialog_message">Introduce el nuevo correo electrónico</string>
    <string name="change_email_dialog_positive_button">Aceptar</string>
    <string name="change_email_dialog_negative_button">Cancelar</string>
    <string name="change_email_success_message">Se ha actualizado el correo electrónico. Se ha enviado un correo de verificación.</string>
    <string name="change_email_verification_error_message">Se ha actualizado el correo electrónico, pero no se pudo enviar el correo de verificación.</string>
    <string name="change_email_update_error_message">Error al actualizar el correo electrónico</string>
    <string name="change_email_user_not_found_message">Usuario no encontrado</string>
    <string name="change_email_previous_user_error_message">Error al buscar el usuario anterior</string>
    <string name="change_email_new_user_error_message">Error al crear el nuevo usuario</string>
    <string name="change_email_invalid_user_message">Usuario no válido. Inicia sesión nuevamente.</string>

    <!-- Menú de información -->
    <string name="menu_information">Información</string>
    <string name="information_dialog_title">Información</string>
    <string name="information_dialog_message">Teléfono: %s\nVersión: %s\nCreador: %s</string>
    <string name="information_dialog_positive_button">Aceptar</string>

    <!-- Menú de cierre de sesión -->
    <string name="menu_logout">Cerrar sesión</string>
    <string name="logout_confirmation_title">Cerrar sesión</string>
    <string name="logout_confirmation_message">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="logout_confirmation_positive_button">Sí</string>
    <string name="logout_confirmation_negative_button">No</string>

    <string name="name_creator">Daniel Jesús Doblas Florido</string>
    <string name="phone_creator">652 68 70 23</string>
    <string name="version">1.0.0</string>


</resources>