<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="start|top"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_today"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:layout_marginTop="16dp" />

                    <TableLayout
                        android:id="@+id/tableMovements"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TableRow>

                            <TextView
                                android:id="@+id/textViewHeaderNombre"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/name"
                                android:textStyle="bold"
                                android:padding="8dp"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/textViewHeaderPhone"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/phone"
                                android:textStyle="bold"
                                android:padding="8dp"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/textViewHeaderTipoReserva"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/booking_type"
                                android:textStyle="bold"
                                android:padding="8dp"
                                android:textAlignment="center" />

                        </TableRow>
                   </TableLayout>

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>




    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>