<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textFieldDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/reservation_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:focusable="false"
                android:clickable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textFieldHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textFieldDay"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/reservation_hour">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:focusable="false"
                android:clickable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPacks"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reservation_pack"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textFieldHour"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp">

            <AutoCompleteTextView
                android:id="@+id/packsFilledExposedDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutGuests"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reservation_guests"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPacks"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16dp">

            <AutoCompleteTextView
                android:id="@+id/guestsFilledExposedDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/verde_hierba"
            android:text="@string/btn_continue"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGuests" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/btnContinue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/santaclara"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="start|top"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nombre:"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Teléfono:"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:layout_marginTop="16dp" />

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Fecha:"
                        android:textSize="14sp"
                        android:drawableStart="@drawable/baseline_calendar_month_24"
                        android:drawablePadding="8dp" />


                    <TextView
                        android:id="@+id/textViewTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Hora:"
                        android:textSize="14sp"
                        android:drawableStart="@drawable/baseline_access_time_24"
                        android:drawablePadding="8dp"/>

                    <TextView
                        android:id="@+id/textViewPack"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Pack de la reserva:"
                        android:textSize="14sp"
                        android:drawableStart="@drawable/baseline_golf_course_24"
                        android:drawablePadding="8dp"/>

                    <TextView
                        android:id="@+id/textViewGuests"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Acompañantes:"
                        android:textSize="14sp"
                        android:drawableStart="@drawable/baseline_guests_restroom_24"
                        android:drawablePadding="8dp"/>

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteY="1dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            android:backgroundTint="@color/verde_hierba" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:text="@string/btn_confirm"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toEndOf="@+id/divider"
            android:backgroundTint="@color/verde_hierba" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>